# parser-of-vacancies-coursework

./: README.md  pyproject.toml
src/: main.py
src/abstract_classes/: api.py  saver.py
src/classes/: head_hunter_api.py  json_saver.py  super_job_api.py  vacancy.py
src/utils/: utils.py
